<resources>
    <string name="app_name">Smart Money</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="loading">Loading...</string>
    <string name="logging_in">Securely logging in...</string>
    <string name="logging_in_failed">Failed to login to get account info, please try again.</string>
    <string name="try_again">Retry</string>
    <string name="accounts">Accounts</string>
    <string name="account_balance_format">$%.2f</string>
    <string name="transfer_between_accounts">Transfer between accounts</string>
    <string name="loading_transactions">Loading transactions...</string>
    <string name="loading_transactions_failed">Failed to load transactions, please try again.</string>

    <string name="banking_operation_pay_merchant">Pay a\nmerchant</string>
    <string name="banking_operation_pay_bill">Pay a\nbill</string>
    <string name="banking_operation_pay_company">Pay a\ncompany</string>
    <string name="banking_operation_pay_person">Pay a\nperson</string>
    <string name="banking_operation_request_money">Request money</string>
    <string name="banking_operation_deposit_check">Deposit a\ncheck</string>
    <string name="banking_operation_insights">Insights</string>
    <string name="banking_operation_offers">Offers</string>
    <string name="banking_operation_wallet">Wallet</string>

    <string name="details">Details</string>
    <string name="connect">Connect</string>
    <string name="available_credit">Available Credit</string>
    <string name="ready_to_talk">We\'re ready, let\'s talk</string>
    <string name="connect_way_call_title">Call us now</string>
    <string name="connect_way_call_detail">You call me</string>
    <string name="connect_way_chat_title">Live chat</string>
    <string name="connect_way_chat_detail">Customer service available</string>
    <string name="connect_way_message_title">Secure message</string>
    <string name="connect_way_message_detail">Send a bank mail via secure message</string>
    <string name="report_fraudulent_transaction">Report Fraudulent Transaction</string>
    <string name="report_duplicate_transaction">Report Duplicate Transaction</string>
    <string name="fraudulent">Fraudulent</string>
    <string name="duplicate">Duplicate</string>

    <string name="drawer_menu_item_banking">My Banking</string>
    <string name="drawer_menu_item_connect">@string/connect</string>
    <string name="drawer_menu_item_settings">@string/action_settings</string>
    <string name="drawer_menu_item_about">About Genius</string>
    <string name="app_version">Application Version: %1$s</string>
    <string name="log_out">Log Out</string>
    <string name="is_chatting_with_sb">is chatting with %1$s</string>
    <string name="chat_cause_detail_formatter">
        Hi, this transaction is a %1$s: \n
        \'%2$s\' \n
        Transaction Id: %3$d \n
        Account: %4$s \n
        Account Number: %5$d \n
        Can you please assist me?
    </string>
    <string name="directions">Directions</string>
    <string name="activated">Activated</string>

    <string name="offer_expire_pattern">Expires in %1$d days</string>
    <string name="offer_distance_pattern">%1$.1f Km Away</string>
    <string name="offer_money_saved_month_pattern">You saved $%1$.2f this month</string>
    <string name="offer_money_saved_next_purchase_pattern">Save %1$.0f%% on your next purchase at %2$s</string>
    <string name="loading_offers_failed">Failed to get offers, please try again.</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Define a common transition name -->
    <string name="transition_name_avator" translatable="false">avator</string>
    <string name="transition_name_transaction" translatable="false">transaction</string>

</resources>
