<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_banking"
            android:icon="@drawable/i_menu_banking"
            android:title="@string/drawer_menu_item_banking"/>
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/i_menu_connect"
            android:title="@string/drawer_menu_item_connect"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/i_menu_setting"
            android:title="@string/drawer_menu_item_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/i_action_g"
            android:title="@string/drawer_menu_item_about"/>
    </group>

</menu>
