<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/transaction_operation_panel_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/transaction_list_item_size"
        android:background="@color/transaction_operation_panel_bkg"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/transaction_item_container_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/transaction_item_container_view"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/transaction_detail_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/i_search_white"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/details"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <Button
            android:id="@+id/transaction_connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/i_message_white"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/transaction_detail_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_height="@dimen/transaction_list_item_size"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        android:foreground="?android:selectableItemBackground"
        android:id="@+id/transaction_item_container_view">

        <TextView
            android:id="@+id/transaction_date_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="21/05/2017"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/transaction_type_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:text="Charge"
            android:textAppearance="@style/TextAppearance.ListItem.Medium"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="@+id/transaction_date_view"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/transaction_date_view"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/transaction_source_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="New York Center Park Coffee - Tea, Sandwich, Doughnut, Cake"
            android:textAppearance="@style/TextAppearance.ListItem.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/transaction_date_view"
            app:layout_constraintTop_toBottomOf="@+id/transaction_type_view"
            app:layout_constraintRight_toLeftOf="@+id/guideline8"
            android:layout_marginRight="8dp"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="231dp"/>

        <TextView
            android:id="@+id/transaction_amount_view"
            android:transitionName="@string/transition_name_transaction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="-$2073.44"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.ListItem.Large"
            app:layout_constraintBottom_toTopOf="@+id/transaction_source_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            app:layout_constraintRight_toLeftOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/transaction_date_view"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/i_swipe_flag"
            android:layout_marginEnd="8dp"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline8"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
